# BUSCO-PhyloMarker-Prioritizer

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_pipeline.sh
config/: config.yaml
docs/: conference_usage.md  theory.md
phylo_marker_prioritizer/: __init__.py
scripts/: align_and_trim.py  compute_alignment_metrics.py  export_panels.py  extract_singlecopy_busco_per_gene.py  find_optimal_panel_size.py  make_busco_summary_table.py  plot_metrics.py  rank_genes_pca.py
tests/: test_metrics.py
